--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">Weather</string>
+    <string name="response_error">Response code: %1$d, %2$s</string>
+    <string name="temperature">Temperature: %.1f °C</string>
+    <string name="wind_speed">Wind Speed: %.1f m/s</string>
+    <string name="wind_direction">Wind direction: %d degrees</string>
+    <string name="weather_code">Weather code: %d</string>
+    <string name="is_day">Is day: %d</string>
+    <string name="time">Time: %s</string>
 </resources>
